--- a/index.html
+++ b/index.html
@@ -27,11 +27,16 @@
     <meta name="twitter:site" content="@website-username">
   -->
   <title>Katie Doran | Graphic Design</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <h1>Test</h1>
+
 </body>
 
 </html>
