first elements of nav

--- a/index.html
+++ b/index.html
@@ -36,7 +36,29 @@
 
 <body>
   <h1>Test</h1>
-
+  <nav>
+    <ul>
+      <li>
+        <a href="#">
+          <img src="https://via.placeholder.com/150" alt="Logo Placeholder">
+        </a>
+      </li>
+      <li>
+        <a href="#">Home</a>
+      </li>
+    </ul>
+    <ul>
+      <li>
+        <a href="#">First Link</a>
+      </li>
+      <li>
+        <a href="#">Second Link</a>
+      </li>
+      <li>
+        <a href="#">Third Link</a>
+      </li>
+    </ul>
+  </nav>
 </body>
 
 </html>
