first styles of nav

--- a/index.html
+++ b/index.html
@@ -35,30 +35,30 @@
 </head>
 
 <body>
-  <h1>Test</h1>
-  <nav>
-    <ul>
-      <li>
-        <a href="#">
-          <img src="https://via.placeholder.com/150" alt="Logo Placeholder">
+  <nav class="navigation">
+    <ul class="left-nav-ul">
+      <li class="left-nav-li">
+        <a class="nav-a flex-img-parent" href="#">
+          <img class="nav-img flex-img" src="https://via.placeholder.com/150" alt="Logo Placeholder">
         </a>
       </li>
-      <li>
-        <a href="#">Home</a>
+      <li class="left-nav-li">
+        <a class="nav-a" href="#">Home</a>
       </li>
     </ul>
-    <ul>
-      <li>
-        <a href="#">First Link</a>
+    <ul class="right-nav-ul">
+      <li class="right-nav-li">
+        <a class="nav-a" href="#">First Link</a>
       </li>
-      <li>
-        <a href="#">Second Link</a>
+      <li class="right-nav-li">
+        <a class="nav-a" href="#">Second Link</a>
       </li>
-      <li>
-        <a href="#">Third Link</a>
+      <li class="right-nav-li">
+        <a class="nav-a" href="#">Third Link</a>
       </li>
     </ul>
   </nav>
+  <h1>Test</h1>
 </body>
 
 </html>
