--- a/index.html
+++ b/index.html
@@ -38,27 +38,29 @@
   <nav class="navigation">
     <ul class="left-nav-ul">
       <li class="left-nav-li">
-        <a class="nav-a flex-img-parent" href="#">
-          <img class="nav-img flex-img" src="https://via.placeholder.com/150" alt="Logo Placeholder">
+        <a class="a nav-a flex-img-parent" href="#">
+          <h1 class="h1">Katie Doran</h1>
         </a>
-      </li>
-      <li class="left-nav-li">
-        <a class="nav-a" href="#">Home</a>
       </li>
     </ul>
     <ul class="right-nav-ul">
       <li class="right-nav-li">
-        <a class="nav-a" href="#">First Link</a>
+        <a class="a nav-a" href="#">First Link</a>
       </li>
       <li class="right-nav-li">
-        <a class="nav-a" href="#">Second Link</a>
+        <a class="a nav-a" href="#">Second Link</a>
       </li>
       <li class="right-nav-li">
-        <a class="nav-a" href="#">Third Link</a>
+        <a class="a nav-a" href="#">Third Link</a>
       </li>
     </ul>
   </nav>
-  <h1>Test</h1>
+  <main class="main">
+    <section class="section-00">
+      <p>The design of the Eiffel Tower is attributed to Maurice Koechlin and Émile Nouguier, two senior engineers working for the Compagnie des Établissements Eiffel. It was envisioned after discussion about a suitable centrepiece for the proposed 1889 Exposition Universelle, a world's fair to celebrate the centennial of the French Revolution. Eiffel openly acknowledged that inspiration for a tower came from the Latting Observatory built in New York City in 1853. In May 1884, working at home, Koechlin made a sketch of their idea, described by him as "a great pylon, consisting of four lattice girders standing apart at the base and coming together at the top, joined together by metal trusses at regular intervals". Eiffel initially showed little enthusiasm, but he did approve further study, and the two engineers then asked Stephen Sauvestre, the head of the company's architectural department, to contribute to the design. Sauvestre added decorative arches to the base of the tower, a glass pavilion to the first level, and other embellishments.</p>
+      <p>The new version gained Eiffel's support: he bought the rights to the patent on the design which Koechlin, Nougier, and Sauvestre had taken out, and the design was put on display at the Exhibition of Decorative Arts in the autumn of 1884 under the company name. On 30 March 1885, Eiffel presented his plans to the Société des Ingénieurs Civils; after discussing the technical problems and emphasising the practical uses of the tower, he finished his talk by saying the tower would symbolise not only the art of the modern engineer, but also the century of Industry and Science in which we are living, and for which the way was prepared by the great scientific movement of the eighteenth century and by the Revolution of 1789, to which this monument will be built as an expression of France's gratitude.</p>
+      <p>Little progress was made until 1886, when Jules Grévy was re-elected as president of France and Édouard Lockroy was appointed as minister for trade. A budget for the exposition was passed and, on 1 May, Lockroy announced an alteration to the terms of the open competition being held for a centrepiece to the exposition, which effectively made the selection of Eiffel's design a foregone conclusion, as entries had to include a study for a 300 m (980 ft) four-sided metal tower on the Champ de Mars. (A 300-metre tower was then considered a herculean engineering effort). On 12 May, a commission was set up to examine Eiffel's scheme and its rivals, which, a month later, decided that all the proposals except Eiffel's were either impractical or lacking in details.</p>
+    </section>
+  </main>
 </body>
-
 </html>
