--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    -->
   <meta property="og:site_name" content="Katie Doran">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.unl.edu/">
+  <meta property="og:url" content="">
   <meta property="og:title" content="Katie Doran | Graphic Design">
   <meta property="og:image" content="">
   <meta property="og:description" content="">
@@ -28,39 +28,170 @@
   -->
   <title>Katie Doran | Graphic Design</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&amp;display=swap" rel="stylesheet">
   <link rel="stylesheet" href="normalize.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
-  <nav class="navigation">
-    <ul class="left-nav-ul">
-      <li class="left-nav-li">
-        <a class="a nav-a flex-img-parent" href="#">
-          <h1 class="h1">Katie Doran</h1>
-        </a>
-      </li>
-    </ul>
-    <ul class="right-nav-ul">
-      <li class="right-nav-li">
-        <a class="a nav-a" href="#">First Link</a>
-      </li>
-      <li class="right-nav-li">
-        <a class="a nav-a" href="#">Second Link</a>
-      </li>
-      <li class="right-nav-li">
-        <a class="a nav-a" href="#">Third Link</a>
-      </li>
-    </ul>
-  </nav>
-  <main class="main">
-    <section class="section-00">
-      <p>The design of the Eiffel Tower is attributed to Maurice Koechlin and Émile Nouguier, two senior engineers working for the Compagnie des Établissements Eiffel. It was envisioned after discussion about a suitable centrepiece for the proposed 1889 Exposition Universelle, a world's fair to celebrate the centennial of the French Revolution. Eiffel openly acknowledged that inspiration for a tower came from the Latting Observatory built in New York City in 1853. In May 1884, working at home, Koechlin made a sketch of their idea, described by him as "a great pylon, consisting of four lattice girders standing apart at the base and coming together at the top, joined together by metal trusses at regular intervals". Eiffel initially showed little enthusiasm, but he did approve further study, and the two engineers then asked Stephen Sauvestre, the head of the company's architectural department, to contribute to the design. Sauvestre added decorative arches to the base of the tower, a glass pavilion to the first level, and other embellishments.</p>
-      <p>The new version gained Eiffel's support: he bought the rights to the patent on the design which Koechlin, Nougier, and Sauvestre had taken out, and the design was put on display at the Exhibition of Decorative Arts in the autumn of 1884 under the company name. On 30 March 1885, Eiffel presented his plans to the Société des Ingénieurs Civils; after discussing the technical problems and emphasising the practical uses of the tower, he finished his talk by saying the tower would symbolise not only the art of the modern engineer, but also the century of Industry and Science in which we are living, and for which the way was prepared by the great scientific movement of the eighteenth century and by the Revolution of 1789, to which this monument will be built as an expression of France's gratitude.</p>
-      <p>Little progress was made until 1886, when Jules Grévy was re-elected as president of France and Édouard Lockroy was appointed as minister for trade. A budget for the exposition was passed and, on 1 May, Lockroy announced an alteration to the terms of the open competition being held for a centrepiece to the exposition, which effectively made the selection of Eiffel's design a foregone conclusion, as entries had to include a study for a 300 m (980 ft) four-sided metal tower on the Champ de Mars. (A 300-metre tower was then considered a herculean engineering effort). On 12 May, a commission was set up to examine Eiffel's scheme and its rivals, which, a month later, decided that all the proposals except Eiffel's were either impractical or lacking in details.</p>
-    </section>
+<body id="body" class="">
+  <aside class="loading-veil" id="loadingVeil">
+    <h2 class="loading-veil-h2">Katie Doran</h2>
+    <p class="loading-veil-p">Loading</p>
+  </aside>
+  <header class="header" id="header">
+    <h1 class="header-mark">KD</h1>
+    <div class="menu-switch" onclick="controller.menuTapClick();" id="menuSwitch">
+      <span class="menu-switch-element"></span>
+      <span class="menu-switch-element"></span>
+      <span class="menu-switch-element"></span>
+      <span class="menu-switch-element"></span>
+    </div>
+  </header>
+  <section class="menu" id="menu">
+    <p class="line-length mb-10">Helvetica is a neo-grotesque design, one influenced by the famous 19th century (1890s) typeface Akzidenz-Grotesk and other German and Swiss designs. Its use became a hallmark of the International Typographic Style
+      that
+      emerged from the work of Swiss designers in the 1950s and '60s, becoming one of the most popular typefaces of the mid-20th century. Over the years, a wide range of variants have been released in different weights, widths, and sizes, as well
+      as matching designs for a range of non-Latin alphabets.</p>
+    <nav class="nav" id="nav">
+      <ul>
+        <li><a class="link" href="#">Resume</a></li>
+        <li><a class="link" href="#">LinkedIn</a></li>
+        <li><a class="link" href="#">Email: email@email.com</a></li>
+        <li><a class="link" href="#">Phone: (1) 111-111-1111</a></li>
+      </ul>
+    </nav>
+  </section>
+  <main class="main" id="main">
+    <div class="grid-00">
+      <a class="" href="#" onclick="controller.openOverlay('projectOverlay00')">
+        <figure class="thumbnail-figure thumbnail-1x1-figure">
+          <img class="thumbnail-1x1-img" src="img/polyphonic-00-1000.jpg" alt="">
+        </figure>
+      </a>
+      <a class="" href="#" onclick="controller.openOverlay('projectOverlay01')">
+        <figure class="thumbnail-figure thumbnail-1x1-figure">
+          <img class="thumbnail-1x1-img" src="img/zaba-00-1000.jpg" alt="">
+        </figure>
+      </a>
+      <a class="" href="#" onclick="controller.openOverlay('projectOverlay02')">
+        <figure class="thumbnail-figure thumbnail-1x1-figure">
+          <img class="thumbnail-1x1-img" src="img/cobalt-01-1000.jpg" alt="">
+        </figure>
+      </a>
+      <a class="" href="#" onclick="controller.openOverlay('projectOverlay03')">
+        <figure class="thumbnail-figure thumbnail-1x1-figure">
+          <img class="thumbnail-1x1-img" src="img/curated-00-1000.jpg" alt="">
+        </figure>
+      </a>
+      <a class="" href="#" onclick="controller.openOverlay('projectOverlay04')">
+        <figure class="thumbnail-figure thumbnail-1x1-figure">
+          <img class="thumbnail-1x1-img" src="img/skydiving-00-1000.jpg" alt="">
+        </figure>
+      </a>
+      <a class="" href="#" onclick="controller.openOverlay('projectOverlay05')">
+        <figure class="thumbnail-figure thumbnail-1x1-figure">
+          <img class="thumbnail-1x1-img" src="img/zoo-01-1000.jpg" alt="">
+        </figure>
+      </a>
+    </div>
   </main>
+  <section class="project-overlay z-index-0 opacity-0" id="projectOverlay00">
+    <div class="overlay-controls mb-10">
+      <h3 class="font-size-01">Polyphonic</h3>
+      <h6 class="link font-size-06" onclick="controller.hideProjectOverlay('projectOverlay00');">Close Me</h6>
+    </div>
+    <div class="grid-01">
+      <figure class="thumbnail-figure thumbnail-1x1-figure">
+        <img class="thumbnail-1x1-img" src="img/polyphonic-00-1000.jpg" alt="">
+      </figure>
+      <figure class="thumbnail-figure thumbnail-1x1-figure">
+        <img class="thumbnail-1x1-img" src="img/polyphonic-01-1000.jpg" alt="">
+      </figure>
+      <figure class="thumbnail-figure thumbnail-1x1-figure">
+        <img class="thumbnail-1x1-img" src="img/polyphonic-02-1000.jpg" alt="">
+      </figure>
+      <figure class="thumbnail-figure thumbnail-1x1-figure">
+        <img class="thumbnail-1x1-img" src="img/polyphonic-03-1000.jpg" alt="">
+      </figure>
+      <figure class="thumbnail-figure thumbnail-1x1-figure">
+        <img class="thumbnail-1x1-img" src="img/polyphonic-04-1000.jpg" alt="">
+      </figure>
+      <figure class="thumbnail-figure thumbnail-1x1-figure">
+        <img class="thumbnail-1x1-img" src="img/polyphonic-05-1000.jpg" alt="">
+      </figure>
+    </div>
+  </section>
+  <section class="project-overlay z-index-0 opacity-0" id="projectOverlay01">
+    <div class="overlay-controls mb-10">
+      <h3 class="font-size-01">Zaba</h3>
+      <h6 class="link font-size-06" onclick="controller.hideProjectOverlay('projectOverlay01');">Close Me</h6>
+    </div>
+    <div class="grid-01">
+      <figure class="thumbnail-figure thumbnail-1x1-figure">
+        <img class="thumbnail-1x1-img" src="img/zaba-00-1000.jpg" alt="">
+      </figure>
+      <figure class="thumbnail-figure thumbnail-1x1-figure">
+        <img class="thumbnail-1x1-img" src="img/zaba-01-1000.jpg" alt="">
+      </figure>
+    </div>
+  </section>
+  <section class="project-overlay z-index-0 opacity-0" id="projectOverlay02">
+    <div class="overlay-controls mb-10">
+      <h3 class="font-size-01">Cobalt</h3>
+      <h6 class="link font-size-06" onclick="controller.hideProjectOverlay('projectOverlay02');">Close Me</h6>
+    </div>
+    <div class="grid-01">
+      <figure class="thumbnail-figure thumbnail-1x1-figure">
+        <img class="thumbnail-1x1-img" src="img/cobalt-01-1000.jpg" alt="">
+      </figure>
+    </div>
+  </section>
+  <section class="project-overlay z-index-0 opacity-0" id="projectOverlay03">
+    <div class="overlay-controls mb-10">
+      <h3 class="font-size-01">Curated</h3>
+      <h6 class="link font-size-06" onclick="controller.hideProjectOverlay('projectOverlay03');">Close Me</h6>
+    </div>
+    <div class="grid-01">
+      <figure class="thumbnail-figure thumbnail-1x1-figure">
+        <img class="thumbnail-1x1-img" src="img/curated-00-1000.jpg" alt="">
+      </figure>
+    </div>
+  </section>
+  <section class="project-overlay z-index-0 opacity-0" id="projectOverlay04">
+    <div class="overlay-controls mb-10">
+      <h3 class="font-size-01">Skydiving</h3>
+      <h6 class="link font-size-06" onclick="controller.hideProjectOverlay('projectOverlay04');">Close Me</h6>
+    </div>
+    <div class="grid-01">
+      <figure class="thumbnail-figure thumbnail-1x1-figure">
+        <img class="thumbnail-1x1-img" src="img/skydiving-00-1000.jpg" alt="">
+      </figure>
+      <figure class="thumbnail-figure thumbnail-1x1-figure">
+        <img class="thumbnail-1x1-img" src="img/skydiving-00-1000.jpg" alt="">
+      </figure>
+    </div>
+  </section>
+  <section class="project-overlay z-index-0 opacity-0" id="projectOverlay05">
+    <div class="overlay-controls mb-10">
+      <h3 class="font-size-01">Zoo</h3>
+      <h6 class="link font-size-06" onclick="controller.hideProjectOverlay('projectOverlay05');">Close Me</h6>
+    </div>
+    <div class="grid-01">
+      <figure class="thumbnail-figure thumbnail-1x1-figure">
+        <img class="thumbnail-1x1-img" src="img/zoo-01-1000.jpg" alt="">
+      </figure>
+      <figure class="thumbnail-figure thumbnail-1x1-figure">
+        <img class="thumbnail-1x1-img" src="img/" alt="">
+      </figure>
+    </div>
+  </section>
+  <footer>
+  </footer>
+  <script type="text/javascript" src="app.js"></script>
+  <script type="text/javascript">
+    window.addEventListener('load', controller.initialLoad());
+    //window.addEventListener('resize', controller.handleResize);
+  </script>
 </body>
 </html>
